force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Actual_Nonbill_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Nonbill_Hours__c</fullName>
    <formula>IF( Billable__c = FALSE, pse__Actual_Hours__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Nonbill Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>