force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Assignment_Role__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Role__c</fullName>
    <formula>TEXT(pse__Assignment__r.pse__Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Role</label>
    <type>Text</type>
</CustomField>