force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Baseline_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Estimated_Hours__c</fullName>
    <label>Baseline Estimated Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>