force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <formula>IF( pse__Assignment__r.pse__Is_Billable__c = True,True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>