force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Billable_Baseline_Hours__c.field-meta.xml
<CustomField>
    <fullName>Billable_Baseline_Hours__c</fullName>
    <formula>IF(Billable__c=TRUE, Baseline_Estimated_Hours__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Baseline Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>