force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Competency_Group__c.field-meta.xml
<CustomField>
    <fullName>Competency_Group__c</fullName>
    <formula>TEXT(pse__Resource__r.Competency_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competency Group</label>
    <type>Text</type>
</CustomField>