force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Forecasted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Hours__c</fullName>
    <formula>IF(AND(ISPICKVAL( pse__Time_Period_Type__c,&apos;Week&apos;), pse__End_Date__c &gt; TODAY()),  pse__Estimated_Hours__c,NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>