force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Include_in_Utilization_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Utilization_Reporting__c</fullName>
    <formula>pse__Resource__r.Include_in_Utilization_Reporting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in Utilization Reporting</label>
    <type>Checkbox</type>
</CustomField>