force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/psa_report__Actual_Billings__c.field-meta.xml
<CustomField>
    <fullName>psa_report__Actual_Billings__c</fullName>
    <formula>pse__Actual_Billable_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>