force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/psa_report__EvA_Variance__c.field-meta.xml
<CustomField>
    <fullName>psa_report__EvA_Variance__c</fullName>
    <formula>if( psa_report__Scheduled_Billings__c = 0.0, 0.0, pse__Actual_Billable_Amount__c / psa_report__Scheduled_Billings__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EvA Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>