force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/psa_report__Scheduled_Billings__c.field-meta.xml
<CustomField>
    <fullName>psa_report__Scheduled_Billings__c</fullName>
    <formula>if ( pse__Scheduled_Bill_Rate_is_Daily_Rate__c = &apos;true&apos; , pse__Scheduled_Bill_Rate__c * pse__Estimated_Days__c,pse__Scheduled_Bill_Rate__c * pse__Estimated_Hours__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>