force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Actual_Average_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Actual_Average_Bill_Rate__c</fullName>
    <description>Actual Billable Amount divided by Actual Hours or Actual Days as appropriate</description>
    <formula>IF(OR(pse__Actual_Days__c = 0, pse__Actual_Hours__c = 0), 0, IF ( pse__Assignment__r.pse__Daily_Bill_Rate__c, (pse__Actual_Billable_Amount__c / pse__Actual_Days__c), (pse__Actual_Billable_Amount__c / pse__Actual_Hours__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual Billable Amount divided by Actual Hours or Actual Days as appropriate</inlineHelpText>
    <label>Actual Average Bill Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>