force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Actual_Hours__c</fullName>
    <inlineHelpText>The number of hours entered on timecards</inlineHelpText>
    <label>Actual Hours</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>