force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Assignment__c.field-meta.xml
<CustomField>
    <fullName>pse__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>pse__Assignment__c</referenceTo>
    <relationshipLabel>Est Vs Actuals</relationshipLabel>
    <relationshipName>Est_Vs_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>