force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__End_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__End_Date__c</fullName>
    <description>End date of the time period for this record. This should not be confused with the end date of the associated assignment or timecards.</description>
    <inlineHelpText>End date of the time period for this record. This should not be confused with the end date of the associated assignment or timecards.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>