force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Percent_Variance__c.field-meta.xml
<CustomField>
    <fullName>pse__Percent_Variance__c</fullName>
    <formula>IF(pse__Estimated_Hours__c != 0,(pse__Actual_Hours__c - pse__Estimated_Hours__c) / pse__Estimated_Hours__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Percent Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>