force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Resource_Request__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the held resource request relating to this Estimates Versus Actuals record.</description>
    <inlineHelpText>Lookup to the held resource request relating to this Estimates Versus Actuals record.</inlineHelpText>
    <label>Resource Request</label>
    <referenceTo>pse__Resource_Request__c</referenceTo>
    <relationshipLabel>Estimates Versus Actuals</relationshipLabel>
    <relationshipName>Estimates_Versus_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>