force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Scheduled_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Scheduled_Bill_Rate__c</fullName>
    <formula>pse__Assignment__r.pse__Bill_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Bill rate from the Assignment</inlineHelpText>
    <label>Scheduled Bill Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>