force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Start_Date__c</fullName>
    <description>Start date of the time period for this record. This should not be confused with the start date of the associated assignment or timecards.</description>
    <inlineHelpText>Start date of the time period for this record. This should not be confused with the start date of the associated assignment or timecards.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>