force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/pse__Time_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Period_Type__c</fullName>
    <description>The type of time period this time span represents</description>
    <inlineHelpText>The type of time period this time span represents</inlineHelpText>
    <label>Time Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>