force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <formula>TEXT(pse__Resource__r.Resource_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Type</label>
    <type>Text</type>
</CustomField>