force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Scheduled_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Billable_Hours__c</fullName>
    <description>Estimated Hours - Only populates if the assignment is billable and EVA record represents a future week. Once the week passes, the value changes to 0</description>
    <formula>IF(AND( pse__End_Date__c  &gt;  TODAY() , Billable__c = True),  pse__Estimated_Hours__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated Hours - Only populates if the assignment is billable and EVA record represents a future week. Once the week passes, the value changes to 0</inlineHelpText>
    <label>Scheduled Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>