force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Scheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Hours__c</fullName>
    <description>Scheduled Billable Hours multiplied by Scheduled Bill Rate</description>
    <formula>Scheduled_Billable_Hours__c*pse__Scheduled_Bill_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Scheduled Billable Hours multiplied by Scheduled Bill Rate</inlineHelpText>
    <label>Scheduled Hours ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>