force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Scheduled_Nonbill_Hours__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Nonbill_Hours__c</fullName>
    <formula>IF(AND( pse__End_Date__c &gt; TODAY() , Billable__c = False), pse__Estimated_Hours__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Nonbill Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>