force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Scheduled_Work_Calendar_Hours__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Work_Calendar_Hours__c</fullName>
    <formula>IF(  pse__End_Date__c &gt;  TODAY() ,  pse__Resource__r.Work_Calendar_Hours_del__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Work Calendar Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>