force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Total_Scheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Scheduled_Hours__c</fullName>
    <formula>IF( pse__End_Date__c &gt; TODAY(), pse__Estimated_Hours__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Scheduled Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>