force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/WAR_Baseline_Hours__c.field-meta.xml
<CustomField>
    <fullName>WAR_Baseline_Hours__c</fullName>
    <formula>IF( pse__Assignment__r.WAR__c = TRUE, Baseline_Estimated_Hours__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WAR Baseline Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>