force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Weighted_Scheduled_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Scheduled_Billable_Hours__c</fullName>
    <formula>IF( pse__End_Date__c  &gt;  TODAY() ,Scheduled_Billable_Hours__c * Opportunity_Probability_Multiplier__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Scheduled Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>