force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Weighted_Scheduled_Billable_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Scheduled_Billable_Utilization__c</fullName>
    <formula>Weighted_Scheduled_Billable_Hours__c  /  Work_Calendar_Total_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Scheduled Billable Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>