force-app/main/default/objects/pse__Est_Vs_Actuals__c/fields/Work_Calendar_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Work_Calendar_Total_Hours__c</fullName>
    <formula>pse__Resource__r.Work_Calendar_Hours_del__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Calendar Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>